<resources>

    <!-- General -->
    <string name="app_name">DevZone</string>
    <string name="txt_fullname">Nome Completo</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password">Senha</string>
    <string name="txt_actual_password">Senha Atual</string>
    <string name="txt_new_password">Nova Senha</string>
    <string name="btn_entrar">Entrar</string>

    <!--Página de login -->
    <string name="txt_title_login">Já estuda com a gente?</string>
    <string name="txt_subtitle_login">Realize seu login e boa aula!</string>
    <string name="txt_title_to_register">Não possui uma conta?</string>
    <string name="btn_registrar">Registrar-se</string>

    <!-- Página de cadastro -->
    <string name="txt_title_register">Não possui uma conta?</string>
    <string name="txt_subtitle_register">Registre-se facilmente e acesse os melhores cursos.</string>
    <string name="txt_title_to_login">Já possui uma conta?</string>

    <!-- Página de Meu Perfil -->
    <string name="txt_title_profile">Meu Perfil</string>
    <string name="txt_settings">Configurações</string>
    <string name="txt_my_data">Meus Dados</string>
    <string name="txt_sign_out">Sair da Conta</string>

    <!-- Página de atualização de Dados -->
    <string name="txt_personal_infos">Informações Pessoais</string>
    <string name="txt_update_password">Alteração de Senha</string>
    <string name="btn_updateData">Atualizar Dados</string>
    <string name="btn_deleteAccount">Deletar conta</string>

    <!--    Página de Cursos-->

    <string name="logo_course">Curso</string>
    <string name="txt_nameCourse">Programação</string>
    <string name="txt_module">2 unidades</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>