<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            android:layout_marginTop="45dp"
            android:text="@string/txt_title_profile" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20sp"
            android:src="@drawable/account_circle"
            app:tint="#474646" />

        <TextView
            android:id="@+id/txtHelloUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="21sp"
            android:layout_marginTop="5sp"/>

        <TextView
            android:id="@+id/txtEmailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="4sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/txt_settings"
            android:textColor="#5E5E5E"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/btnMyData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_my_data"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#454444"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_gravity="center"
                android:src="@drawable/navigate_next"
                app:tint="#454444" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/txt_sign_out"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#DC0A0A" />

    </LinearLayout>
</RelativeLayout>